--- a/styles.css
+++ b/styles.css
@@ -1,29 +1,65 @@
 body {
-    padding-top: 56px;
+    padding-top: 0px;
     background-color: rgba(36, 86, 88, 0.278); /* Light Green */
     color: #fff; /* White text for better contrast */
   }
-  
-  .navbar-brand img {
-    max-height: 40px;
-  }
-  
-  .navbar-toggler-icon {
-    background-color: #fff;
-  }
-  
-  .navbar-collapse {
-    text-align: center;
-  }
-  
-  .navbar-nav {
-    margin-top: 10px;
-  }
-  
-  .navbar-nav a {
+  header {
+    background-color: #001f3f;
+    color: white;
     padding: 10px;
-    color: #fff; /* White text for better contrast */
-  }
+    text-align: center;
+    border-bottom: 2px rgb(230, 193, 13) solid;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    font-family: 'Times New Roman', Times, serif;
+}
+
+header img {
+    max-width: 85px;
+    margin-right: 10px;
+}
+
+nav {
+    background-color: #003366;
+    padding: 8px;
+    text-align: center;
+    animation: fadeIn 1s ease-in-out;
+}
+
+nav ul {
+    margin-top: 4px;
+    list-style-type: none;
+    display: flex;
+    justify-content: center;
+}
+
+nav li {
+    margin: 0 15px;
+}
+
+nav a {
+    text-decoration: none;
+    color: white;
+    font-weight: bold;
+    font-size: 16px;
+    padding: 8px 12px;
+    border: none;
+    border-radius: 20px;
+    transition: background-color 0.3s, color 0.3s;
+    display: flex;
+    align-items: center;
+}
+
+nav a i {
+    margin-right: 5px;
+}
+
+nav a:hover {
+    background-color: #fff;
+    color: #001f3f;
+}
+
   
   .carousel-section {
     background-color: #a18f36; /* Dark Green */
@@ -106,8 +142,8 @@ body {
     }
   }
   footer {
-    background-color: #b3b8ba;
-    color: #333; /* Darker text color for better visibility */
+    background-color: #1a4657;
+    color: #ffffff; /* Darker text color for better visibility */
     padding: 20px 0;
     text-align: center;
     font-family: 'Arial', sans-serif; /* Use a formal font */
@@ -116,36 +152,30 @@ body {
 }
 
 .footer-contact {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-wrap: wrap;
-    margin-bottom: 10px;
+  display: flex;
+  justify-content: center;
+  margin-bottom: 20px;
 }
-
 .footer-contact-item {
-    display: flex;
-    align-items: center;
-    margin: 10px;
+  margin-right: 20px;
 }
-
 .footer-contact-item i {
-    font-size: 24px;
-    margin-right: 10px;
+  font-size: 24px;
+  margin-bottom: 10px;
+  display: block;
 }
+.footer-links a {
+  color: white;
+  margin-top: 10px;
+  text-decoration: none;
 
-.footer-contact-item a {
-    color: #29688a; /* Darker link color for better visibility */
-    text-decoration: none;
-    font-size: 16px; /* Adjust the font size as needed */
 }
-
 .footer-contact-item a:hover {
     text-decoration: underline; /* Add underline on hover */
 }
 
 .footer-links a {
-    color: #1a4258;
+    color: #ffffff;
     text-decoration: none;
     margin: 0 20px;
     font-weight: bold;
@@ -154,5 +184,127 @@ body {
 
 .footer-links a:hover {
     color: #555; /* Darker link color on hover */
+}
+.hamburger-menu div {
+  width: 30px;
+  height: 3px;
+  background-color: white;
+  margin: 6px 0;
+  transition: 0.4s;
+  margin-left: 20px;
+}
+
+.mobile-nav {
+display: none;
+flex-direction: column;
+align-items: center;
+background-color: #003366;
+top: 60px;
+left: 0;
+width: 100%;
+z-index: 1000; /* Change z-index value to 1000 */
+opacity: 0;
+transform: translateY(-20px);
+transition: transform 0.3s ease-in-out, opacity 0.3s ease-in-out;
+}
+
+.mobile-nav.show {
+opacity: 1;
+transform: translateY(0);
+top: 60px; /* Updated this line to position it below the header */
+}
+
+.hamburger-menu {
+display: none;
+cursor: pointer;
+order: -1;
+margin: 0 auto;
+z-index: 1001;
+}
+.mobile-nav ul {
+list-style-type: none;
+padding: 0;
+margin: 0;
+}
+.mobile-nav a {
+  color: white;
+  text-decoration: none;
+  padding: 15px;
+  text-align: center;
+  display: block;
+  transition: background-color 0.3s, color 0.3s;
+}
+
+.mobile-nav a:hover {
+  background-color: #fff;
+  color: #001f3f;
+}
+@media (max-width: 768px) {
+.mobile-nav.show {
+display: flex;
+}
+}
+@media (max-width: 768px) {
+  .hamburger-menu {
+      display: block;
+  }
+
+  nav ul {
+      display: none;
+      flex-direction: column;
+      width: 100%;
+      text-align: center;
+      position: absolute;
+      top: 60px;
+      left: 0;
+      background-color: #003366;
+      z-index: 999;
+  }
+
+  nav ul.show {
+      display: flex;
+  }
+
+  nav li {
+      margin: 0;
+      width: 100%;
+  }
+}
+@media (max-width: 768px) {
+header {
+padding: 10px 0;
+}
+
+header img {
+margin-bottom: 0;
+}
+}
+@media (max-width: 768px) {
+nav {
+padding: 8px 0;
+}
+
+nav ul {
+flex-direction: column;
+align-items: center;
+}
+
+nav li {
+margin: 10px 0;
+margin-left: 4px;
+}
+}
+@keyframes fadeIn {
+  from {
+      opacity: 0;
+  }
+  to {
+      opacity: 1;
+  }
+}
+@media (max-width: 768px) {
+  .ministry {
+      width: calc(100% - 20px);
+  }
 }
 
